# OntExtract

./: .dockerignore  .env.docker  .env.example  .env.local  .env.production  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENT_EXPERIMENT_TRACKING.md  BASELINE_METRICS.md  BFO_IMPLEMENTATION_PLAN_REVISED.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_NOTE.md  DEPLOYMENT_UPDATE_GUIDE.md  DOCKER.md  DOCKER_SETUP.md  DOCUMENT_VERSIONING_PLAN.md  Dockerfile  Dockerfile.postgres  ESCAPING_OPTIONS.md  EXPERIMENTS_GUIDE.md  EXPERIMENTS_SPLIT_PLAN.md  HIERARCHICAL_EMBEDDINGS.md  IMPLEMENTATION_STATUS.md  INSTALLATION_OPTIONS.md  JCDL_STANDALONE_IMPLEMENTATION.md  JCDL_TESTING_CHECKLIST.md  LICENSE  LLM_ANALYZE_IMPLEMENTATION_PLAN.md  LLM_CONFIGURATION.md  LLM_ERROR_HANDLING_IMPLEMENTATION.md  LLM_WORKFLOW_REFERENCE.md  ORCHESTRATION_AUDIT.md  PHASE1_COMPLETE.md  PHASE_0_COMPLETE.md  PHASE_3_PLAN.md  PROGRESS.md  PROVO_VISUALIZATION_README.md  (+93 more)
.claude/agents/: README.md  documentation-writer.md  git-deployment-sync.md  temporal-evolution-experiment.md  upload-agent-documents.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  llm_config.py  text_utils.py
app/dto/: __init__.py  base.py  evolution_dto.py  experiment_dto.py  orchestration_dto.py  pipeline_dto.py  temporal_dto.py  term_dto.py
app/forms/: __init__.py  term_forms.py
app/models/: __init__.py  app_settings.py  composite_document.py  context_anchor.py  document.py  experiment.py  experiment_document.py  experiment_orchestration_run.py  experiment_processing.py  extracted_entity.py  oed_models.py  ontology_mapping.py  orchestration_feedback.py  orchestration_logs.py  processing_artifact_group.py  processing_job.py  prompt_template.py  prov_o_models.py  (+7 more)
backups/: DATABASE_MIGRATION_README.md  ontextract_backup_20251116_144044.sql  ontextract_db_backup.sql  ontextract_db_backup_20250901_172601.backup  ontextract_db_backup_20250901_172618.sql  restore_ontextract_db.sh
config/: __init__.py  llm_config.py
database_migrations/: add_composite_documents.sql  add_document_embeddings_table.sql  add_document_embeddings_table_simple.sql  add_document_embeddings_with_vector.sql  add_document_versioning.sql  add_experiment_document_model.sql  add_experiment_document_model_postgresql.sql  add_human_in_the_loop_tables.sql  add_oed_data_tables.sql  add_orchestration_logging_tables.sql  add_prov_o_tables.sql  add_provenance_models.sql  add_segmentation_method_tracking.sql  create_proper_prov_o_schema.sql  fix_prov_o_relationships.sql  fix_prov_o_schema.sql  inheritance_based_versioning.sql  ontextract_db_dump_20250907_201158.sql  update_oed_definitions_excerpts.sql  update_version_type_constraint.sql
db_migration/: 015_create_temporal_experiment_tables.sql  016_add_metadata_provenance.sql  017_create_app_settings.sql  018_create_prompt_templates.sql  add_celery_task_id.sql
docs/: CONSOLIDATED_DOCUMENTATION_INDEX.md  CONTENT_TEMPLATES.md  DEMO_EXPERIMENT_SUMMARY.md  DOCKER.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_QUICK_START.md  EXPERIMENTS_GUIDE.md  HISTORICAL_PIPELINE_SUMMARY.md  INSTALL.md  LANGEXTRACT_IMPLEMENTATION.md  LITERATURE_REVIEW_PROGRESS.md  LITERATURE_REVIEW_SUMMARY.md  LLM_ANALYZE_TEST_SUMMARY.md  LLM_MODEL_CONFIGURATION.md  LLM_WORKFLOW_REFERENCE.md  OED_UPLOAD_TEST_GUIDE.md  ONTOLOGY_ENHANCEMENTS_V2.md  PIPELINE_INTEGRATION_ROADMAP.md  PROGRESS.md  SETTINGS_SIMPLIFICATION_PHASE1.md  STANDALONE_MODE_TEST_RESULTS.md  TEMPORAL_EVOLUTION_GUIDE.md  WRITING_STYLE_CHECKLIST.md  examplePROVO.txt  faq.md  index.md  reference_metadata_enrichment_plan.md  temporal-analysis-technical-summary.md  temporal-experiment-langchain-plan.md  term-entry-system-plan.md
docs-internal/: DOCUMENTATION_SUMMARY.md  JCDL_TESTING_CHECKLIST.md  TEMPORAL_TIMELINE_PROGRESS.md  TEST_FIX_GUIDE.md  USER_AGENCY_ARCHITECTURE.md  VALIDATION_GUIDE.md
faq/: index.html
migrations/: add_citation_field.sql  add_document_metadata.sql  add_document_parent.sql  add_document_uuid.sql  add_experiments_table.sql  add_references_support.sql  add_term_tables.sql  enhance_experiment_documents.sql  fix_term_version_anchors_id_default.sql  migrate_publication_dates.py
ontologies/: semantic-change-ontology-v2.rdf  semantic-change-ontology-v2.ttl  semantic-change-ontology.ttl
ontology_cache/: bfo.json  prov-o.json  prov-o.ttl
paper/: main.tex
scratch/: test_langextract_simple.py  test_oed_integration.py  test_oed_layout_detection.py  test_oed_periods.py  test_ontology_import.py  test_temporal_analysis.py
scripts/: db-ensure.sh  deploy_production.sh  init-db.sql  install.sh  migrate_metadata_to_columns.py  startup.sh
search/: search_index.json
shared_services/: __init__.py
tests/: GETTING_STARTED.md  README.md  conftest.py  helpers.py  test_admin_error_read_service.py  test_admin_user_service.py  test_app_config.py  test_auth_service.py  test_composite_feature_retirement.py  test_definition_cleanup_service.py  test_demo_routes_smoke.py  test_dictionary_reference_creation_service.py  test_document_artifact_service.py  test_document_cleanup.py  test_document_cleanup_workflow.py  test_document_crud.py  test_document_embedding_workflow.py  test_document_input_service.py  test_document_methods_api.py  test_document_page_service.py  test_document_segmentation_service.py  test_embedding_diagnostics_service.py  test_evolution_service.py  test_experiment_creation_service.py  test_experiment_definition_results_service.py  test_experiment_detail_read_service.py  test_experiment_editing_service.py  test_experiment_embedding_results_service.py  test_experiment_entity_results_service.py  test_experiment_lifecycle_service.py  test_experiment_results_routes.py  test_experiment_route_modularization.py  test_experiment_segment_results_service.py  test_experiment_temporal_results_service.py  test_experiment_term_management.py  test_experiments_crud.py  test_historical_pipeline.py  test_langgraph_orchestration.py  test_legacy_upload_workflow.py  test_llm_config.py  (+48 more)
uploads/: d6dd53a205134b39acf419764b66f82b_NSPE_Code_of_Ethics.md
(+544 files in other folders)
