[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontextract"
version = "1.0.0"
description = "Ontology Extraction and Semantic Analysis Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OntExtract Team"},
]
keywords = ["ontology", "semantic-analysis", "nlp", "temporal-drift", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Migrate>=4.0.7",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.2.1",
    "Flask-CORS>=4.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "Werkzeug>=3.0.3",
    "WTForms>=3.1.2",
    "bcrypt>=4.3.0",
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "nltk>=3.8.1",
    "spacy>=3.7.5",
    "langdetect>=1.0.9",
    "beautifulsoup4>=4.13.4",
    "python-docx>=1.2.0",
    "pypdf>=5.1.0",
    "lxml>=6.0.0",
    "sentence-transformers>=2.3.1",
    "numpy>=1.26.4",
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
    "requests>=2.32.3",
    "urllib3>=2.1.0",
    "httpx>=0.27.2",
    "Jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "gunicorn>=22.0.0",
    "python-magic>=0.4.27",
    "PyYAML>=6.0.1",
    "structlog>=23.2.0",
    "langextract",
    "pyzotero>=1.5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "coverage[toml]>=7.3.2",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "radon>=6.0.1",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "types-python-dotenv>=1.0.0",
]

[project.scripts]
ontextract = "run:main"

[tool.setuptools]
packages = ["app", "shared_services", "config"]

# ==============================================================================
# RUFF - Fast Python Linter and Formatter
# ==============================================================================
[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4

# Assume Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "ontology_cache",
    "uploads",
    "data",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Plus: isort (I), docstrings (D), annotations (ANN), etc.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # Ruff-specific rules
]

# Ignore certain rules
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E501",    # Line too long (handled by formatter)
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "PLR0913", # Too many arguments to function call (we'll address in refactor)
    "PLR2004", # Magic value used in comparison (we'll address in refactor)
    "TRY003",  # Avoid specifying long messages outside exception class (too strict)
]

# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "ANN",     # Type annotations not required in tests
    "D",       # Docstrings not required in tests
    "PLR2004", # Magic values OK in tests
    "S101",    # Assert is OK in tests
]

# Ignore certain rules in migration files
"migrations/**/*.py" = ["ALL"]

# Init files can skip imports
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shared_services", "config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending.
line-ending = "auto"

# ==============================================================================
# MYPY - Static Type Checker
# ==============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, will enable later
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Incrementally enable strict mode
# After adding type hints to a module, add it to the list below
files = ["app", "shared_services", "config", "tests"]

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "spacy.*",
    "rdflib.*",
    "owlrl.*",
    "langdetect.*",
    "pypdf.*",
    "docx.*",
    "pyzotero.*",
    "langextract.*",
    "magic.*",
    "sentence_transformers.*",
    "anthropic.*",
]
ignore_missing_imports = true

# Start strict on new services
[[tool.mypy.overrides]]
module = "app.repositories.*"
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true

# ==============================================================================
# PYTEST - Testing Framework
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Ensure all markers are registered
    "--strict-config",        # Ensure config is valid
    "--showlocals",           # Show local variables in tracebacks
    "--tb=short",             # Short traceback format
    "--cov=app",              # Measure coverage for app package
    "--cov=shared_services",  # Measure coverage for shared_services
    "--cov-report=html",      # Generate HTML coverage report
    "--cov-report=term-missing",  # Show missing lines in terminal
    "--cov-report=xml",       # Generate XML for CI/CD
    "--cov-fail-under=0",     # Don't fail on low coverage yet (will increase)
]

# Markers for test categorization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_db: marks tests that require database",
    "requires_api: marks tests that require external API keys",
]

# Ignore deprecation warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning:flask_sqlalchemy.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

# ==============================================================================
# COVERAGE - Code Coverage
# ==============================================================================
[tool.coverage.run]
source = ["app", "shared_services"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# BANDIT - Security Linter
# ==============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    ".venv",
    "venv",
]
skips = [
    "B101",  # Assert used (OK in tests)
    "B601",  # Paramiko usage (if needed)
]

# ==============================================================================
# BLACK (if needed as fallback to ruff format)
# ==============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
